scss/_base_code.scss
@import 'settings';

// Base code styles
@mixin vf-b-code {
  code,
  samp,
  kbd {
    font-family: unquote($font-monospace);
    font-weight: 300;
    text-align: left;
  }

  pre,
  code {
    // sass-lint:disable no-vendor-prefixes property-sort-order
    direction: ltr;
    -webkit-hyphens: none;
    -ms-hyphens: none;
    hyphens: none;
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
    white-space: pre-wrap;
    word-spacing: normal;
    word-wrap: break-word;
    // sass-lint:enable no-vendor-prefixes property-sort-order
  }

  pre {
    background-color: $color-light;
    border: 1px solid $color-mid-light;
    border-radius: $border-radius;
    color: $color-dark;
    display: block;
    margin-bottom: $spv-outer--scaleable;
    margin-top: 0;
    overflow: auto;
    padding: calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px) $sph-inner calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px);
    text-align: left;
    text-shadow: none;
  }
}

